minor adjustments to the draft

--- a/draft/vmp.tex
+++ b/draft/vmp.tex
@@ -87,17 +87,17 @@ The distribution in rapidity $Y$ of the production of a vector meson $V$ in the 
  \label{fig:vmp_feynman}
 \end{figure}
 
-Generally speaking, the $\gamma p$ cross section depends on three variables: the total energy of the $\gamma p$ system, $W_{\gamma p}$,
+Generally speaking, the $\gamma p$ cross section depends on three variables: the total energy of the $\gamma p$ system, $W$,
 the squared momentum transfer $t$ and virtuality $\tilde Q^2=Q^2+M_V^2$, where $Q^2=-q^2$ is the photon virtuality. Since, by definition, in ultraperipheral, $b>>R_1+R_2,$
 collisions, where $b$ is the impact parameter, i.e. the closest distance between the centres of the colliding particles/nuclei) and R is their radii,
 photons are nearly real, $Q^2=0$, $M_V^2$ remains the only measure of "hardness". (NB: this may not be true for the peripheral $b\sim R_1+R_2$ collisions and in
 Pomeron or Odderon exchange instead of the photon.) Finally, the $t$-dependence (shape of the diffraction cone) is known to be exponential. It can be either integrated, or 
-kept explicit. Extending this parametrization to include a $t-$dependent exponential is easy (see below). In any case, $\sigma_{\gamma p\rightarrow Vp}(\omega)$ is well known from HERA.
-{\bf(so far we haven't introduced $\omega$!)}
+kept explicit. Extending this parametrization to include a $t-$dependent exponential is easy (see below).
+In any case, $\sigma_{\gamma p\rightarrow Vp}(W)$, is well known from HERA.
 
-We start with a simple parametrization of the $\sigma_{\gamma p\rightarrow Vp}(\omega)$ cross section, $\sigma(W)=\int_{t_m}^{t_{thr}}\frac{d\sigma}{dt},$
+We start with a simple parametrization of the $\sigma_{\gamma p\rightarrow Vp}(W)$ cross section, $\sigma(W)=\int_{t_m}^{t_{thr}}\frac{d\sigma}{dt},$
 suggested by Donnachie and Landshoff \cite{DL}: $\sigma(W)\sim W^{\delta},\ \delta\approx 0.8$ (more involved models, e.g. of Ref. \cite{Capua, Fazio}
-will be considered below), and we remind that $W_{\gamma p}^2=2\omega\sqrt {s}$.
+will be considered below).
 
  Let us rewrite Eq. (\ref{1}) as
  \begin{equation}\label{1}
