added some comments to the draft

--- a/draft/vmp.tex
+++ b/draft/vmp.tex
@@ -151,7 +151,7 @@ Ref. \cite{Francesco}, with a limited number (five) of adjustable parameters, fi
 Another simple and efficient model was suggested and applied to deeply virtual Compton scattering (DVCS) in Ref. \cite{Capua}. Apart from $W$ and $t$, it contains alwo dependence on virtuality $Q^2$.
 The model was fitted to the HERA data on DVCS, but it can be applied also to vector meson production (VMP) by refitting its parametes.
 Instead, below we shall use two versions of the so-called Reggeometric model of VMP and DVCS, suggested in Refs. \cite{Fazio}a) and \cite{Fazio}b).
-Its first version \cite{Fazio} a) applies to photoproduction ($Q^2=0$), and the integrated phopoptoduction cross section, Eq. (11) in Ref. \cite{Fazio}a), is
+Its first version \cite{Fazio} a) applies to photoproduction ($Q^2=0$), and the integrated photoproduction cross section, Eq. (11) in Ref. \cite{Fazio}a), is {\bf($s$ was replaced by $W^2$)}
 \begin{equation}
 \sigma_{el}=A_0^2\frac{(s/s_0)^{2(\alpha_0-1)}}{(1+\tilde Q^2/Q^2_0)^{2n}[2\alpha'\ln(s/s_0)+4\Bigl(\frac{a}{\tilde Q^2}+\frac{b}{2m_N^2}\Bigr)]},
 \end{equation}
@@ -185,7 +185,7 @@ Since this is a complicated and controversial issue {\it per se} deserving speci
 We borrow the values of these correction factors from Ref.\cite{Ryskin} b), calculated accorging to Eq.(18) and collected in Table 2, both in that paper.
 
 The obtained (corrected) results are shown in Fig... and are compared with the results of our calulations in Sec.\ref{realistic}.
-
+{\bf note, the correction of 0.8 was already included in all plots.}
 \section{Pomeron, Odderon and other($\omega, {\it f},...$) Reggeon exchanges}\label{Reggeons}
 
 \section{Inelastic photoproduction} 
