--- a/draft/vmp.tex
+++ b/draft/vmp.tex
@@ -69,7 +69,7 @@ contribution from the Odderon and secondary trajectories;
 \item we study possible deviation from the exponential behaviour of the $t$-dependence
 (the forward cone);
 
-\item because of the long range of the electromagnetic interactions, ultra-peripheral collisions imply real photon exchange, which is not neccesarily true for the exchnge of the Pomeron and other strongly interacting (short range) reggeons;  therefore, differently from the papers of our predecessors \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}, we consider also electroproduction ($Q^2\neq 0$).
+\item because of the long range of the electromagnetic interactions, ultra-peripheral collisions imply real photon exchange, which is not neccesarily true for the exchange of the Pomeron and other strongly interacting (short range) reggeons;  therefore, differently from the papers of our predecessors \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}, we consider also electroproduction ($Q^2\neq 0$).
 
 \end{itemize}
 
