--- a/draft/vmp.tex
+++ b/draft/vmp.tex
@@ -32,7 +32,8 @@ National Academy of Sciences of Ukraine} \centerline{\sl Kiev,
 0.1cm
 
 \begin{abstract}\noindent
-By using a two-component Pomeron model, successfully describing the HERA data on exclusive diffractive vector meson production (VMP) and deeply virtual Compton scattering (DVCS), we analyse the data on VMP in ultra-peripheral collisions at the LHC. Predictions for future experiments on the production of $J/\Psi$ and other vector mesons are presented.
+By using a two-component Pomeron model, successfully describing the HERA data on exclusive diffractive vector meson production (VMP) and deeply virtual Compton scattering (DVCS), we analyse the data on VMP in ultra-peripheral collisions at the LHC.
+Predictions for future experiments on production of $J/\psi$ and other vector mesons are presented.
 \end{abstract}
 
 \vskip 0.1cm
@@ -40,13 +41,10 @@ By using a two-component Pomeron model, successfully describing the HERA data on
 $
 \begin{array}{ll}
 
-^{\diamond}\mbox{{\it e-mail address:}} &
-   \mbox{vladyslav.libov@desy.de} \\
 ^{\star}\mbox{{\it e-mail address:}} &
    \mbox{jenk@bitp.kiev.ua} \\
-
-%^{\ast}\mbox{{\it e-mail address:}} &
- %  \mbox{?@?.?} \\
+^{\diamond}\mbox{{\it e-mail address:}} &
+   \mbox{vladyslav.libov@desy.de} \\
 
 \end{array}
 $
@@ -55,13 +53,14 @@ $
 
 \section{Introduction}\label{Int}
 
-After the closure of HERA, exclusive diffractive production of mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the LHC \cite{LHCb1, LHCb2}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}. For relevant review papers see, e.g. \cite{Review}.
-The first results on vector meson production, in particular of $J/\Psi$, are already published \cite{LHCb1, LHCb2}.
+After the shutdown of HERA, exclusive diffractive production of mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the LHC \cite{LHCb1, LHCb2}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}.
+For relevant review papers see, e.g. \cite{Review}.
+First results on vector meson production, in particular of $J/\psi$, are already published \cite{LHCb1, LHCb2}.
 
 In our studies of vector meson production production at the LHC we concentrate on the following issues:
 \begin{itemize}
 
-\item we investigate possible changes in the energy dependence of the cross sections when moving from HERA to the LHC, in particular we are interested the change from "soft" (light vector mesons) to those heavy ($\phi,\ \ J/\Psi,\ \ \Upsilon$ {\it etc.}) mesons;
+\item we investigate possible changes in the energy dependence of the cross sections when moving from HERA to the LHC, in particular we are interested the change from "soft" (light vector mesons) to those heavy ($\phi,\ \ J/\psi,\ \ \Upsilon$ {\it etc.}) mesons;
 
 \item apart from the "standard" (familiar) photon and Pomeron exchanges, we study the
 contribution from the Odderon and secondary trajectories;
@@ -76,9 +75,8 @@ contribution from the Odderon and secondary trajectories;
 \section{Simple parametrizations of $\sigma_{\gamma p\rightarrow Vp}(\omega)$;\\
 The photon flux}\label{simple}
 
-The vector meson production (VMP) cross section, Fig. 1, can be written in a factorized form, see \cite{Brazil, Review} 
-(see, e.g. Eqs. (1) and (9) in \cite{Brazil}a)) is
-The distribution in rapidity $Y$ of the production of a vector meson $V$ in the reaction $h_1+h_2\rightarrow h_1Vh_2,$ (where $h$ may be a hadron, e.g. proton, or a nucleus, pPb, PbPb,...) is calculated according to a standard prescripion base on factorization of the photon flux and photon-proton cross section (see below).
+The vector meson production (VMP) cross section, Fig. 1, can be written in a factorized form, see \cite{Brazil, Review} (e.g. Eqs. (1) and (9) in \cite{Brazil}a)).
+The distribution in rapidity $Y$ of the production of a vector meson $V$ in the reaction $h_1+h_2\rightarrow h_1Vh_2,$ (where $h$ may be a hadron, e.g. proton, or a nucleus, pPb, PbPb,...) is calculated according to a standard prescripion based on the factorization of the photon flux and photon-proton cross section (see below).
 
 \begin{figure}[!h]
 \centering
@@ -88,18 +86,19 @@ The distribution in rapidity $Y$ of the production of a vector meson $V$ in the 
 \end{figure}
 
 Generally speaking, the $\gamma p$ cross section depends on three variables: the total energy of the $\gamma p$ system, $W$,
-the squared momentum transfer $t$ and virtuality $\tilde Q^2=Q^2+M_V^2$, where $Q^2=-q^2$ is the photon virtuality. Since, by definition, in ultraperipheral, $b>>R_1+R_2,$
-collisions, where $b$ is the impact parameter, i.e. the closest distance between the centres of the colliding particles/nuclei) and R is their radii,
-photons are nearly real, $Q^2=0$, $M_V^2$ remains the only measure of "hardness". (NB: this may not be true for the peripheral $b\sim R_1+R_2$ collisions and in
-Pomeron or Odderon exchange instead of the photon.) Finally, the $t$-dependence (shape of the diffraction cone) is known to be exponential. It can be either integrated, or 
+the squared momentum transfer at the proton vertex, $t$, and virtuality $\tilde Q^2=Q^2+M_V^2$, where $Q^2=-q^2$ is the photon virtuality. Since, by definition, in ultraperipheral, $b>>R_1+R_2,$
+collisions, where $b$ is the impact parameter, i.e. the closest distance between the centres of the colliding particles/nuclei and R is their radii,
+photons are nearly real, $Q^2=0$, and $M_V^2$ remains the only measure of "hardness" (NB: this might not be true for the peripheral $b\sim R_1+R_2$ collisions and in
+Pomeron or Odderon exchange instead of the photon). Finally, the $t$-dependence (shape of the diffraction cone) is known to be exponential. It can be either integrated, or 
 kept explicit. Extending this parametrization to include a $t-$dependent exponential is easy (see below).
-In any case, $\sigma_{\gamma p\rightarrow Vp}(W)$, is well known from HERA.
+In any case, $\sigma_{\gamma p\rightarrow Vp}(\tilde Q^2, t, W)$, is well known from HERA.
+{\tiny\bf (I added  $Q^2$, $t$ as arguments since at this point we haven't yet said explicitely that we consider $t$ integration.)}
 
-We start with a simple parametrization of the $\sigma_{\gamma p\rightarrow Vp}(W)$ cross section, $\sigma(W)=\int_{t_m}^{t_{thr}}\frac{d\sigma}{dt},$
+We start with a simple parametrization of the $\sigma_{\gamma p\rightarrow Vp}(W)$ cross section, $\sigma_{\gamma p\rightarrow Vp}(W)=\int_{t_m}^{t_{thr}}\frac{d\sigma}{dt},$
 suggested by Donnachie and Landshoff \cite{DL}: $\sigma(W)\sim W^{\delta},\ \delta\approx 0.8$ (more involved models, e.g. of Ref. \cite{Capua, Fazio}
 will be considered below).
 
- Let us rewrite Eq. (\ref{1}) as
+The differential cross section as a function of rapidity reads:
  \begin{equation}\label{1}
 \frac{d\sigma (h_1+h_2\rightarrow h_1+V+h_2)}{dY}=\omega_+\frac{dN_{\gamma/h_1}(\omega_+)}{d\omega}\sigma_{\gamma h_2\rightarrow Vh_2}(\omega_+)+
 \omega_-\frac{dN_{\gamma/h_2}(\omega_-)}{d\omega}\sigma_{\gamma h_1\rightarrow Vh_1}(\omega_-),
@@ -107,7 +106,7 @@ will be considered below).
 where $\frac{dN_{\gamma/h}(\omega)}{d\omega}$ is the "equivalent" photon flux \cite{Review} 
 $\frac{dN_{\gamma/h}(\omega)}{d\omega}=\frac{\alpha_{em}}{2\pi\omega}[1+(1-\frac{2\omega}{\sqrt{s}})^2]
 (\ln\Omega-\frac{11}{6}+\frac{3}{\Omega}-\frac{3}{2\Omega^2}+\frac{1}{3\Omega^3})$
-and $\sigma_{\gamma p\rightarrow Vp}(\omega)$ is the total (integrated in $t$) cross section of the vector meson photoproduction subprocess (same as e.g. at HERA, see \cite{Capua, Fazio}). Here $\omega$ is the photon energy, $\omega=W^2_{\gamma p}/2\sqrt s_{pp}$ with
+and $\sigma_{\gamma p\rightarrow Vp}(\omega)$ is the total (integrated over $t$) cross section of the vector meson photoproduction subprocess (same as e.g. at HERA, see \cite{Capua, Fazio}). Here $\omega$ is the photon energy, $\omega=W^2_{\gamma p}/2\sqrt s_{pp}$ with
 $\omega_{min}=M_V^2/(4\gamma_Lm_p),$ where $\gamma_L=\sqrt s/(2m_p)$ 
 is the Lorentz factor (Lorentz boost of a single beam), e.g., for pp at the LHC for $\sqrt{s}=7$~TeV,
 $\gamma_L=3731$.
@@ -116,24 +115,23 @@ Furthermore,
 $\Omega=(\xi ?!)=1+Q_0^2/Q_{min}^2,\  Q_{min}^2=\omega/\gamma_L^2,\   Q_0^2=0.71GeV^2,\   x=M_Ve^{(-y)}/\sqrt s,\  Y\sim\ln(2\omega/m_V)$ is rapidity, $y=Y(?$).
  The subscripts $\pm$ should be respected following Eq. (\ref{1}).
 Furthermore we have: $\Omega=1+Q^2_0/Q^2_{min}$, where $Q_0^2=0.71,\ \ Q_{min}^2=\omega/\gamma^2_L,\ \omega=m_Ve^Y/2$, hence $\Omega_i=1+0.71\gamma_L^2,\ \ \gamma_L^2=7/(2m_p)\approx 3.57, \  \
-m_{V=J/\Psi}=3.1, \sqrt{s}=7, \ \alpha_{em}/(2\pi)\approx 10^{-3},$ hence $Q^2_{min}\approx 5.54e^Y,\ \ \Omega=1+3.9e^{-Y}$. For definiteness we fix: a) the colliding particles are protons;
-b) the produced vector meson $V$ is $J/\Psi$, and 3) the collision energy $\sqrt s=7$ TeV.
+m_{V=J/\psi}=3.1, \sqrt{s}=7, \ \alpha_{em}/(2\pi)\approx 10^{-3},$ hence $Q^2_{min}\approx 5.54e^Y,\ \ \Omega=1+3.9e^{-Y}$. For definiteness we fix: a) the colliding particles are protons;
+b) the produced vector meson $V$ is $J/\psi$, and 3) the collision energy $\sqrt s=7$ TeV.
 We comprise the constants in $A=\alpha_{em}/(2\pi),\ \  c=Q_0^2\gamma_L^2$.
 (Notice that the shape of the distribution in $Y$ is very sensitive to the value (and the sign) of the constant $c$!). The $i=\pm$ signs of $\omega$ correspond to the first or second term in Eq. (\ref{1}), respectively, $\omega_{\pm}\sim e^{\pm Y}$.
 
-To fix the notation, basic parameters and show the difference in the energy ($W$) dependence of the produced vector meson, we start with a "pedagogical" example containing the standard photon flux and the simplest model for $\sigma(W)\sim W^{0.8}$, without any $t$ or $Q^2$ dependence ({\it i.e.} photoproduction for $t=0$) {\bf(is it $t$=0 or integrated over $t$??)}.
-Fig.~\ref{fig:sigma_y_simple} shows the distribution in rapidity $Y$. Fig.~\ref{fig:sigma_w_simple} shows the energy dependence of $J/\Psi$ photoproduction cross section at the LHC ($\sqrt{s}=7$ TeV) (solid line)
-compared with that at HERA \cite{Fazio} (dashed line) {\bf (this is pp cross section so comparison to HERA not possible!?)}.
+To fix the notation, basic parameters and show the difference in the energy ($W$) dependence of the produced vector meson, we start with a "pedagogical" example containing the standard photon flux and the simplest model for $\sigma(W)\sim W^{0.8}$, without any $t$ or $Q^2$ dependence ({\it i.e.} photoproduction for $t=0$) {\tiny\bf(it is integrated over $t$, not $t=0$, right?)}.
+Fig.~\ref{fig:dSigma_dy_nodata} shows the distribution in rapidity $Y$. Fig.~\ref{fig:dSigma_dW_nodata} shows the energy dependence of $J/\psi$ photoproduction cross section at the LHC ($\sqrt{s}=7$ TeV).
 
 \begin{figure}[!h]
   \centering
-  \subfigure[]{\label{fig:sigma_y_simple}
-    \includegraphics[height=5cm]{figures/sigma_y_simple}
+  \subfigure[]{\label{fig:dSigma_dy_nodata}
+    \includegraphics[height=5cm]{figures/dSigma_dy_nodata.eps}
   }
-  \subfigure[]{\label{fig:sigma_w_simple}
-    \includegraphics[height=5cm]{figures/sigma_w_simple.eps}
+  \subfigure[]{\label{fig:dSigma_dW_nodata}
+    \includegraphics[height=5cm]{figures/dSigma_dy_nodata.eps}
   }
-  \caption{Differential cross section as a function of rapidity $Y$ (a) and photon-proton centre-of-mass energy (b).}
+  \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ (a) and of the photon-proton centre-of-mass energy $W$ (b).}
 \end{figure}
 
 In subsequent sections we extend the simple model of the previous section, namely:
@@ -144,9 +142,9 @@ In subsequent sections we extend the simple model of the previous section, namel
 \end{itemize} 
 
 \section{Realistic model of $\gamma p\rightarrow V$ cross section}\label{realistic}
-A simple model for $J/\Psi$ photoproduction ("testing field for diffraction"), based on a dipole Pomeron exchange 
+A simple model for $J/\psi$ photoproduction ("testing field for diffraction"), based on a dipole Pomeron exchange 
 was proposed in paper \cite{Francesco}. The model, Eqs. (5)-(7) of 
-Ref. \cite{Francesco}, with a limited number (five) of adjustable parameters, fits the data on $J/\Psi$ photoproduction, and it can be used for our purposes.
+Ref. \cite{Francesco}, with a limited number (five) of adjustable parameters, fits the data on $J/\psi$ photoproduction, and it can be used for our purposes.
 
 Another simple and efficient model was suggested and applied to deeply virtual Compton scattering (DVCS) in Ref. \cite{Capua}. Apart from $W$ and $t$, it contains alwo dependence on virtuality $Q^2$.
 The model was fitted to the HERA data on DVCS, but it can be applied also to vector meson production (VMP) by refitting its parametes.
@@ -155,26 +153,26 @@ Its first version \cite{Fazio} a) applies to photoproduction ($Q^2=0$), and the 
 \begin{equation}
 \sigma_{el}=A_0^2\frac{(s/s_0)^{2(\alpha_0-1)}}{(1+\tilde Q^2/Q^2_0)^{2n}[2\alpha'\ln(s/s_0)+4\Bigl(\frac{a}{\tilde Q^2}+\frac{b}{2m_N^2}\Bigr)]},
 \end{equation}
-where $\tilde Q^2=Q^2+m_V^2$ and the parameters, fitted \cite{Fazio}a) to $J/\Psi$ photoproduction, quoted in
+where $\tilde Q^2=Q^2+m_V^2$ and the parameters, fitted \cite{Fazio}a) to $J/\psi$ photoproduction, quoted in
 Table II of Ref. \cite{Fazio}a), are: $A_0=29.8\pm 2.8,\ \ Q_0^2=2.1\pm 0.4,\ \ 
 n=1.37\pm 0.14,\ \ \alpha_0 =1.20\pm 0.02,\ \ \alpha'=0.17\pm 0.05, a=1.01\pm 0.11,\ \ b=0.44\pm 0.08,\ \ s_0=1$ and relevant dimensions here again are implied.
-Fig.~\ref{fig:sigma_y_realistic} shows the calculated rapidity distributions for $J/\Psi$ production at the LHC while Fig.~\ref{fig:sigma_w_realistic} shows the $W$ dependence of the produced $J/\Psi$.
-
-\begin{figure}[!h]
-  \centering
-  \subfigure[]{\label{fig:sigma_y_realistic}
-    \includegraphics[height=5cm]{figures/sigma_y_realistic}
-  }
-  \subfigure[]{\label{fig:sigma_w_realistic}
-    \includegraphics[height=5cm]{figures/sigma_w_realistic}
-  }
-  \caption{Differential cross section as a function of rapidity $Y$ (a) and photon-proton centre-of-mass energy (b).}
-\end{figure}
-
+Fig.~\ref{fig:dSigma_dy_nodata} shows the calculated rapidity distributions for $J/\psi$ production at the LHC while Fig.~\ref{fig:dSigma_dW_nodata} shows the $W$ dependence of the produced $J/\psi$.
 
 A more advanced version of the Reggeometric model, Ref. \cite{Fazio}b) includes also $Q^2-$ dependence (electroproduction), the universal "Reggeometric" Pomeron containing two terms, a "hard" and a "soft" one, their relative weight depending on $\tilde Q^2$. Te relevant scattering amplitude is quoted in Eq. (13) of Ref. \cite{Fazio}b) with the fitted parameters collected in Tables 2 to 4 of of the same paper.
 
-The calculated cross sections together with the new data from Refs. \cite{LHCb1, LHCb2} are shown in Figs. ......
+The calculated cross sections as a function of rapidity together with the new data from LHC~\cite{LHCb1, LHCb2} are shown in Fig.~\ref{fig:dSigma_dy_comparison1}.
+The photoproduction cross section as a function of $W$ is shown in Fig.~\ref{fig:sigma_gamma_p_W_powerlaw_vs_geometric}.
+
+\begin{figure}[!h]
+  \centering
+  \subfigure[]{\label{fig:dSigma_dy_comparison1}
+    \includegraphics[height=5cm]{figures/dSigma_dy_comparison1.eps}
+  }
+  \subfigure[]{\label{fig:sigma_gamma_p_W_powerlaw_vs_geometric}
+    \includegraphics[height=5cm]{figures/sigma_gamma_p_W_powerlaw_vs_geometric.eps}
+  }
+  \caption{Differential cross section  of $J/\psi$ production  at LHC as a function of rapidity $Y$ (a). $J/\psi$ photoproduction ($\gamma p \to J/\psi p$) cross section as a function photon-proton centre-of-mass energy (b).}
+\end{figure}
 
 \section{Corrections for rapidity gap survival probabilities}\label{corrections}
 The above results may be modified by initial and final state interactions,
@@ -185,7 +183,7 @@ Since this is a complicated and controversial issue {\it per se} deserving speci
 We borrow the values of these correction factors from Ref.\cite{Ryskin} b), calculated accorging to Eq.(18) and collected in Table 2, both in that paper.
 
 The obtained (corrected) results are shown in Fig... and are compared with the results of our calulations in Sec.\ref{realistic}.
-{\bf note, the correction of 0.8 was already included in all plots.}
+{\tiny\bf note, the correction of 0.8 was already included in all plots. If it's a constant, I think there is not much sense to reproduce both sets of plots (with and without the correctoin). But we could also try to use a rapidity dependent correction. then it would be interesting to compare.}
 \section{Pomeron, Odderon and other($\omega, {\it f},...$) Reggeon exchanges}\label{Reggeons}
 
 \section{Inelastic photoproduction} 
@@ -237,5 +235,48 @@ c) S.P. Jones, A.D. Martin, and M.G. Ryskin and T. Teubner, {\it Predictions of.
 hep-ph/1312.5683, Dec. 2013. 
 
 \end{thebibliography}
+
+\newpage
+\section{Appendices}
+Here some additional plots and comments are placed.
+
+\subsection{Comments to rapidity cross section}
+
+\subsubsection{Fitting the power law to LHCb data}
+
+By fitting the power (and normalization)
+a much better description of data can be
+obtained (green curve)
+However, power tends to be very small ($\delta$=0.37)
+\begin{figure}[!h]
+\centering
+ \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison2.eps}
+ \caption{Power law (power+normalization) are fitted to LHCb rapidity data}
+\end{figure}
+
+\clearpage
+\subsubsection{Comparison of all available theory curves}
+\begin{figure}[!h]
+\centering
+ \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison3.eps}
+ \caption{Power law (fitted and 0.8), logarithmic and geometric models compared to LHCb rapidity cross section}
+\end{figure}
+
+\begin{figure}[!h]
+\centering
+ \includegraphics[width=.8\textwidth]{figures/Magno.png}
+ \caption{Figure from LHCb publication showing other models}
+\end{figure}
+
+
+\clearpage
+\subsection{Comments to photon proton cross section}
+Although by going to lower power it is possible to improve LHCb rapidity data, the photon proton cross section becomes clearly not consistent with data.
+\begin{figure}[!h]
+\centering
+ \includegraphics[width=.8\textwidth]{figures/sigma_gamma_p_W_all_theory.eps}
+ \caption{Power law (fitted and 0.8), logarithmic and geometric models compared to photon proton cross section from LHCb and HERA.}
+\end{figure}
+
 
 \end{document}
